@@ -7,6 +7,8 @@ Thu Feb 15 10:44:59 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 	* src/org/jcae/mesh/Mesher.java
 	  src/org/jcae/mesh/xmldata/MeshToSoupConvert.java: Fix handling of
 	org.jcae.mesh.Mesher.minFace and org.jcae.mesh.Mesher.maxFace options.
+	* src/org/jcae/mesh/oemm/RawOEMM.java: Fix several minor bugs in
+	aggregate().
 
 Wed Feb 14 17:28:19 CET 2007 Denis Barbier <barbier@users.sourceforge.net>
 
